[project]
name = "pytest-monkey"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "杨俊", email = "junyang@listenai.com"},
]
dependencies = [
    "tqdm~=4.67.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.0.0",
    "pytest-json-report>=1.5.0",
    "pylint~=3.2.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points.pytest11]
random_runner = "pytest_random_runner"

[tool.setuptools]
py-modules = ["pytest_random_runner", "random_runner"]

[tool.setuptools.packages.find]
include = ["runner*"]

[tool.pdm]
distribution = true
