[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-monkey"
version = "0.1.0"
description = "pytest plugin for random test runner with reproducible execution"
authors = [
    {name = "Enrico Yang", email = "jackie826@163.com"},
]
dependencies = [
    "tqdm~=4.67.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.0.0",
    "pytest-json-report>=1.5.0",
    "pylint~=3.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[project.entry-points.pytest11]
monkey = "pytest_monkey"

[tool.setuptools]
py-modules = ["pytest_monkey", "random_runner"]

[tool.setuptools.packages.find]
include = ["runner*"]
